# AI-Retrievability-tool-

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
demo/: report.html
docs/: BUILD_LOG.md  INPUT_SPEC.md  INSTALL.md  PROMPT_ITERATION.md  SPEC.md  edge-cases-tracker.md  report-design.md
review_tool/: aggregate.py  analyze.py  classify.py  ingest.py  llm_client.py  profile.py  report.py  scorer.py
review_tool/prompts/: business_profile.md  review_scorer.md
review_tool/schemas/: business_profile.json  corpus_report.json  review_labeler_output.json
scripts/: validate_gold_set.py
tests/: conftest.py  evaluate.py  test_aggregate.py  test_classify.py  test_ingest.py  test_labeler_dev.py  test_report.py
tests/fixtures/: milk_bar_sample.csv  milk_bar_sample.json  review_retrievability_gold_v3.json  thin_corpus.csv
